crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_setext_text_thematic_break_pandoc.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..8
  HEADING@0..8
    HEADING_CONTENT@0..3
      TEXT@0..3 "***"
    NEWLINE@3..4 "\n"
    SETEXT_HEADING_UNDERLINE@4..7
      SETEXT_HEADING_UNDERLINE@4..7 "---"
    NEWLINE@7..8 "\n"
