crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_setext_underline_crosses_blockquote_commonmark.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..10
  BLOCK_QUOTE@0..6
    BLOCK_QUOTE_MARKER@0..1 ">"
    WHITESPACE@1..2 " "
    PARAGRAPH@2..6
      TEXT@2..5 "foo"
      NEWLINE@5..6 "\n"
  HORIZONTAL_RULE@6..10
    HORIZONTAL_RULE@6..9 "---"
    NEWLINE@9..10 "\n"
