crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_simple_table.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..531
  SIMPLE_TABLE@0..256
    TABLE_HEADER@0..41
      WHITESPACE@0..3 "   "
      TABLE_CELL@3..8
        TEXT@3..8 "Right"
      WHITESPACE@8..13 "     "
      TABLE_CELL@13..17
        TEXT@13..17 "Left"
      WHITESPACE@17..22 "     "
      TABLE_CELL@22..28
        TEXT@22..28 "Center"
      WHITESPACE@28..33 "     "
      TABLE_CELL@33..40
        TEXT@33..40 "Default"
      NEWLINE@40..41 "\n"
    TABLE_SEPARATOR@41..90
      TABLE_SEP_WHITESPACE@41..42 " "
      TABLE_SEP_DASHES@42..49 "-------"
      TABLE_SEP_WHITESPACE@49..54 "     "
      TABLE_SEP_DASHES@54..60 "------"
      TABLE_SEP_WHITESPACE@60..61 " "
      TABLE_SEP_DASHES@61..71 "----------"
      TABLE_SEP_WHITESPACE@71..74 "   "
      TABLE_SEP_DASHES@74..89 "---------------"
      NEWLINE@89..90 "\n"
    TABLE_ROW@90..130
      WHITESPACE@90..96 "      "
      TABLE_CELL@96..98
        TEXT@96..98 "12"
      WHITESPACE@98..103 "     "
      TABLE_CELL@103..105
        TEXT@103..105 "12"
      WHITESPACE@105..113 "        "
      TABLE_CELL@113..115
        TEXT@113..115 "12"
      WHITESPACE@115..127 "            "
      TABLE_CELL@127..129
        TEXT@127..129 "12"
      NEWLINE@129..130 "\n"
    TABLE_ROW@130..170
      WHITESPACE@130..135 "     "
      TABLE_CELL@135..138
        TEXT@135..138 "123"
      WHITESPACE@138..143 "     "
      TABLE_CELL@143..146
        TEXT@143..146 "123"
      WHITESPACE@146..153 "       "
      TABLE_CELL@153..156
        TEXT@153..156 "123"
      WHITESPACE@156..166 "          "
      TABLE_CELL@166..169
        TEXT@166..169 "123"
      NEWLINE@169..170 "\n"
    TABLE_ROW@170..210
      WHITESPACE@170..177 "       "
      TABLE_CELL@177..178
        TEXT@177..178 "1"
      WHITESPACE@178..183 "     "
      TABLE_CELL@183..184
        TEXT@183..184 "1"
      WHITESPACE@184..194 "          "
      TABLE_CELL@194..195
        TEXT@194..195 "1"
      WHITESPACE@195..208 "             "
      TABLE_CELL@208..209
        TEXT@208..209 "1"
      NEWLINE@209..210 "\n"
    BLANK_LINE@210..211
      BLANK_LINE@210..211 "\n"
    TABLE_CAPTION@211..256
      TABLE_CAPTION_PREFIX@211..218 "Table: "
      TEXT@218..255 "Demonstration of simp ..."
      NEWLINE@255..256 "\n"
  BLANK_LINE@256..257
    BLANK_LINE@256..257 "\n"
  PARAGRAPH@257..291
    TEXT@257..290 "Simple table indented ..."
    NEWLINE@290..291 "\n"
  BLANK_LINE@291..292
    BLANK_LINE@291..292 "\n"
  SIMPLE_TABLE@292..531
    TABLE_HEADER@292..334
      WHITESPACE@292..296 "    "
      TABLE_CELL@296..301
        TEXT@296..301 "Right"
      WHITESPACE@301..306 "     "
      TABLE_CELL@306..310
        TEXT@306..310 "Left"
      WHITESPACE@310..315 "     "
      TABLE_CELL@315..321
        TEXT@315..321 "Center"
      WHITESPACE@321..326 "     "
      TABLE_CELL@326..333
        TEXT@326..333 "Default"
      NEWLINE@333..334 "\n"
    TABLE_SEPARATOR@334..376
      TABLE_SEP_WHITESPACE@334..336 "  "
      TABLE_SEP_DASHES@336..343 "-------"
      TABLE_SEP_WHITESPACE@343..348 "     "
      TABLE_SEP_DASHES@348..354 "------"
      TABLE_SEP_WHITESPACE@354..355 " "
      TABLE_SEP_DASHES@355..365 "----------"
      TABLE_SEP_WHITESPACE@365..368 "   "
      TABLE_SEP_DASHES@368..375 "-------"
      NEWLINE@375..376 "\n"
    TABLE_ROW@376..413
      WHITESPACE@376..383 "       "
      TABLE_CELL@383..385
        TEXT@383..385 "12"
      WHITESPACE@385..390 "     "
      TABLE_CELL@390..392
        TEXT@390..392 "12"
      WHITESPACE@392..401 "         "
      TABLE_CELL@401..403
        TEXT@401..403 "12"
      WHITESPACE@403..410 "       "
      TABLE_CELL@410..412
        TEXT@410..412 "12"
      NEWLINE@412..413 "\n"
    TABLE_ROW@413..451
      WHITESPACE@413..419 "      "
      TABLE_CELL@419..422
        TEXT@419..422 "123"
      WHITESPACE@422..427 "     "
      TABLE_CELL@427..430
        TEXT@427..430 "123"
      WHITESPACE@430..437 "       "
      TABLE_CELL@437..440
        TEXT@437..440 "123"
      WHITESPACE@440..447 "       "
      TABLE_CELL@447..450
        TEXT@447..450 "123"
      NEWLINE@450..451 "\n"
    TABLE_ROW@451..487
      WHITESPACE@451..459 "        "
      TABLE_CELL@459..460
        TEXT@459..460 "1"
      WHITESPACE@460..465 "     "
      TABLE_CELL@465..466
        TEXT@465..466 "1"
      WHITESPACE@466..476 "          "
      TABLE_CELL@476..477
        TEXT@476..477 "1"
      WHITESPACE@477..485 "        "
      TABLE_CELL@485..486
        TEXT@485..486 "1"
      NEWLINE@486..487 "\n"
    BLANK_LINE@487..488
      BLANK_LINE@487..488 "\n"
    TABLE_CAPTION@488..531
      WHITESPACE@488..490 "  "
      TABLE_CAPTION_PREFIX@490..492 ": "
      TEXT@492..530 " Demonstration of sim ..."
      NEWLINE@530..531 "\n"
